[package]
name = "miniquad"
version = "0.3.15"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/miniquad"
repository = "https://github.com/not-fl3/miniquad"
description = """
Cross-platform window context and rendering library.
"""
readme="README.md"
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[features]

# Optional log-rs like macros implementation
# disabled by default
log-impl = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "windef", "shellscalingapi", "errhandlingapi", "windowsx", "winbase", "hidusage"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-sys = "0.2"
ndk-context = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2"

[dev-dependencies]
glam = {version = "0.14", features = ["scalar-math"] }
quad-rand = "0.1"

[target.'cfg(target_env = "ohos")'.dependencies]
ohos-xcomponent-binding = "0.1"
raw-window-handle = "0.6"
napi-ohos = { version = "1.1.3", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.1.3" }
ohos-hilog-binding = { version = "0.1.2"}
xcomponent-sys = { version = "0.3.4", features = ["api-14", "keyboard-types"] }
keyboard-types = "0.8.3"
ohos-xcomponent-sys = {version = "0.0.2"}
ohos_enum_macro = { version = "0.0.2"}
ohos-ime-binding = { version = "0.1.0" }
[target.'cfg(target_env = "ohos")'.build-dependencies]
napi-build-ohos = { version = "1.1.3" }
